# py-opnsense-backup

./: .gitignore  README.md  get_opnsense_config.py  pyproject.toml  requirements.txt
opnsense_backup/: get_opnsense_config.py
